traefik-deploy-simple.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-service
  namespace: default
spec:
  ports:
  # remove admin when not required
  - protocol: TCP
    name: admin
    port: 8080
  - protocol: TCP
    name: websecure
    port: 4443
  selector:
    app: traefik
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik-deployment
  namespace: default
spec:
  selector:
    matchLabels:
      app: traefik
  replicas: 1
  template:
    metadata:
      labels:
        app: traefik
    spec:
      containers:
      - name: traefik-container
        image: traefik:2.6
        args:
        # remove the next for production
        - --api.insecure
        - --accesslog
        - --entrypoints.websecure.Address=:4443
        - --providers.file.filename=/etc/traefik/routes.yaml
        ports:
        - name: websecure
          containerPort: 4443
        volumeMounts:
        - name: traefik-routes-volume
          mountPath: /etc/traefik
      volumes:
      - name: traefik-routes-volume
        configMap:
          name: cm-traefik-routes

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-for-traefik
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "public-iks-k8s-nginx"
spec:
  tls:
# uncomment when using the IBM Cloud Kubernetes service host and domain
#  - hosts:
#    - traefik.cluster-region-some-name.region.containers.appdomain.cloud
#    secretName: cluster-region-some-name
  - hosts:
    - traefiktest.example.com
    secretName: tls-custom-domain
  rules:
# uncomment when using the IBM Cloud Kubernetes service host and domain
#  - host: traefik.cluster-region-some-name.region..containers.appdomain.cloud
#    http:
#      paths:
#      - path: /
#        pathType: Prefix
#        backend:
#          service:
#            name: traefik-service
#            port: 
#              number: 4443
  - host: "traefiktest.example.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: traefik-service
            port: 
              number: 4443
